# masto_rss

./: .env.example  .gitignore  Cargo.toml  Config.placeholder.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
src/: main.rs
