[package]
name = "masto_rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.0"
actix-web = { version = "4", features = ["openssl"] }
megalodon = { version = "0.1" }
derive_more = "0.99.0"
atrium-api = { git = "https://github.com/atrium-rs/atrium", package = "atrium-api" }
atrium-xrpc = { git = "https://github.com/atrium-rs/atrium", package = "atrium-xrpc", features = ["reqwest"] }
chrono = "0.4"
serde_json = "1.0"

[dev-dependencies]
