[package]
name = "masto_rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.0"
actix-web = { version = "4", features = ["openssl"] }
megalodon = { version = "0.1" }
derive_more = "0.99.0"
atrium-api = "0.25.7"
atrium-xrpc = "0.25.7"
chrono = "0.4"
serde_json = "1.0"

[dev-dependencies]
