[package]
name = "masto_rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.0"
actix-web = { version = "4", features = ["openssl"] }
reqwest = "0.11"
derive_more = "0.99.0"
atrium-api = "0.25.7"
atrium-xrpc = "0.12.3"
atrium-xrpc-client = { version = "0.5.14", features = ["reqwest"] }
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
